Tweaked link libs.

--- a/Makefile.am
+++ b/Makefile.am
@@ -12,7 +12,7 @@ est_epsilon_SOURCES = est-epsilon.c
 est_epsilon_LDADD = $(base_LIBS)
 
 gl_info_SOURCES = gl-info.c
-gl_info_LDADD = $(opengl_LIBS) $(base_LIBS)
+gl_info_LDADD = $(opengl_LIBS)
 
 test_mktime_SOURCES = test-mktime.cxx
 test_mktime_LDADD = $(base_LIBS)
