Added a VERSION file to contain the current version number. Updated NEWS.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 SUBDIRS = Include Lib Simulator Tools Tests
 
 EXTRA_DIST = README.Unix README.Linux README.Win32 \
-	README.autoconf README.running Thanks acsite.m4
+	README.autoconf README.running Thanks VERSION acsite.m4
 
 dist-hook:
 	tar cf - Hints | (cd $(distdir); tar xvf -)
