--- a/Time/Makefile.am
+++ b/Time/Makefile.am
@@ -13,6 +13,7 @@ libTime_a_SOURCES = \
 	fg_time.cxx fg_time.hxx \
 	fg_timer.cxx fg_timer.hxx \
 	light.cxx light.hxx \
-	sunpos.cxx sunpos.hxx
+	sunpos.cxx sunpos.hxx \
+	timestamp.hxx
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib -I$(top_builddir)/Simulator
