--- a/Bucket/Makefile.am
+++ b/Bucket/Makefile.am
@@ -1,5 +1,12 @@
 noinst_LIBRARIES = libBucket.a
 
-libBucket_a_SOURCES = bucketutils.c bucketutils.h bucketutils.hxx
+libBucket_a_SOURCES = bucketutils.c bucketutils.h bucketutils.hxx \
+	newbucket.cxx newbucket.hxx
+
+bin_PROGRAMS = testbucket
+
+testbucket_SOURCES = testbucket.cxx
+
+testbucket_LDADD = $(top_builddir)/Lib/Bucket/libBucket.a
 
 INCLUDES += -I$(top_builddir)
