--- a/configure.in
+++ b/configure.in
@@ -6,7 +6,7 @@ dnl
 AC_INIT(Simulator/Aircraft/aircraft.cxx)
 
 dnl Initialize the automake stuff
-AM_INIT_AUTOMAKE(FlightGear, 0.58)
+AM_INIT_AUTOMAKE(FlightGear, 0.59)
 
 dnl Checks for programs.
 AC_PROG_MAKE_SET
@@ -329,6 +329,7 @@ AC_OUTPUT( \
 	Tools/FixObj/Makefile \
 	Tools/GenAirports/Makefile \
 	Tools/Makedir/Makefile \
+	Tools/Polygon/Makefile \
 	Tools/ShapeFile/Makefile \
 	Tools/SplitTris/Makefile \
 	Tools/Stripe_w/Makefile \
