Added initial support for native SGI compilers. Integrated Jon's next version of JSBsim.

--- a/FDM/Makefile.am
+++ b/FDM/Makefile.am
@@ -7,3 +7,5 @@ libFlight_a_SOURCES = flight.cxx flight.hxx \
 	LaRCsim.cxx LaRCsim.hxx
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib -I$(top_builddir)/Simulator
+
+DEFS += -DFGFS
