--- a/configure.in
+++ b/configure.in
@@ -332,19 +332,22 @@ AC_OUTPUT( \
 	Simulator/Time/Makefile \
 	Simulator/Weather/Makefile \
 	Tools/Makefile \
+	Tools/Lib/Makefile \
+	Tools/Lib/DEM/Makefile \
+	Tools/Lib/Polygon/Makefile \
+	Tools/Prep/Makefile \
+	Tools/Prep/DemInfo/Makefile \
+	Tools/Prep/DemRaw2ascii/Makefile \
+	Tools/Prep/GenAirports/Makefile \
+	Tools/Prep/ShapeFile/Makefile \
+	Tools/Utils/Makefile \
+	Tools/Utils/Makedir/Makefile \
 	Tools/Areas/Makefile \
 	Tools/AssemTris/Makefile \
 	Tools/Clipper/Makefile \
-	Tools/DEM/Makefile \
 	Tools/Dem2node/Makefile \
-	Tools/DemInfo/Makefile \
-	Tools/DemRaw2ascii/Makefile \
 	Tools/FixNode/Makefile \
 	Tools/FixObj/Makefile \
-	Tools/GenAirports/Makefile \
-	Tools/Makedir/Makefile \
-	Tools/Polygon/Makefile \
-	Tools/ShapeFile/Makefile \
 	Tools/SplitTris/Makefile \
 	Tools/Stripe_w/Makefile \
 	Tools/Tri2obj/Makefile \
