Added irix-hack.pl plus info on compiling with native Irix compilers. Added a DEM prep tool called DemChop.

--- a/configure.in
+++ b/configure.in
@@ -336,6 +336,7 @@ AC_OUTPUT( \
 	Tools/Lib/DEM/Makefile \
 	Tools/Lib/Polygon/Makefile \
 	Tools/Prep/Makefile \
+	Tools/Prep/DemChop/Makefile \
 	Tools/Prep/DemInfo/Makefile \
 	Tools/Prep/DemRaw2ascii/Makefile \
 	Tools/Prep/GenAirports/Makefile \
