Moved to math subdirectory.

--- a/Math/Makefile.am
+++ b/Math/Makefile.am
@@ -8,6 +8,7 @@ libMath_a_SOURCES = \
 	fg_geodesy.cxx fg_geodesy.hxx \
 	fg_random.c fg_random.h \
 	interpolater.cxx interpolater.hxx \
+	leastsqs.cxx leastsqs.hxx \
 	mat3.h mat3defs.h mat3err.h \
 	point3d.hxx \
 	polar3d.cxx polar3d.hxx \
