renamed bin "clipper" to "testclipper".

--- a/Clipper/Makefile.am
+++ b/Clipper/Makefile.am
@@ -1,10 +1,12 @@
 noinst_LIBRARIES = libClipper.a
-bin_PROGRAMS = clipper
 
 libClipper_a_SOURCES = clipper.cxx clipper.hxx
-clipper_SOURCES = main.cxx
 
-clipper_LDADD = $(top_builddir)/Tools/Clipper/libClipper.a \
+bin_PROGRAMS = testclipper
+
+testclipper_SOURCES = main.cxx
+
+testclipper_LDADD = $(top_builddir)/Tools/Construct/Clipper/libClipper.a \
 	$(top_builddir)/Tools/Lib/Polygon/libPolygon.a \
 	$(top_builddir)/Lib/Debug/libDebug.a \
 	$(top_builddir)/Lib/Misc/libMisc.a \
