Rearranging subdirs within Tools/

--- a/configure.in
+++ b/configure.in
@@ -332,6 +332,10 @@ AC_OUTPUT( \
 	Simulator/Time/Makefile \
 	Simulator/Weather/Makefile \
 	Tools/Makefile \
+	Tools/Construct/Makefile \
+	Tools/Construct/Array/Makefile \
+	Tools/Construct/Clipper/Makefile \
+	Tools/Construct/Main/Makefile \
 	Tools/Lib/Makefile \
 	Tools/Lib/DEM/Makefile \
 	Tools/Lib/Polygon/Makefile \
@@ -345,7 +349,6 @@ AC_OUTPUT( \
 	Tools/Utils/Makedir/Makefile \
 	Tools/Areas/Makefile \
 	Tools/AssemTris/Makefile \
-	Tools/Clipper/Makefile \
 	Tools/Dem2node/Makefile \
 	Tools/FixNode/Makefile \
 	Tools/FixObj/Makefile \
