--- a/Main/Makefile.am
+++ b/Main/Makefile.am
@@ -17,4 +17,5 @@ construct_LDADD = \
 INCLUDES += \
 	-I$(top_builddir) \
 	-I$(top_builddir)/Lib \
+	-I$(top_builddir)/Tools/Lib \
 	-I$(top_builddir)/Tools/Construct
