Continued work on triangulation preparation.

--- a/Triangulate/Makefile.am
+++ b/Triangulate/Makefile.am
@@ -7,4 +7,5 @@ libTriangulate_a_SOURCES = \
 INCLUDES += \
 	-I$(top_builddir) \
 	-I$(top_builddir)/Lib \
+	-I$(top_builddir)/Tools/Lib \
 	-I$(top_builddir)/Tools/Construct
