--- a/Triangulate/Makefile.am
+++ b/Triangulate/Makefile.am
@@ -2,7 +2,8 @@ noinst_LIBRARIES = libTriangulate.a
 
 libTriangulate_a_SOURCES = \
 	triangle.cxx triangle.hxx \
-	trinodes.cxx trinodes.hxx
+	trinodes.cxx trinodes.hxx \
+	tripoly.cxx tripoly.hxx
 
 INCLUDES += \
 	-I$(top_builddir) \
