--- a/Main/Makefile.am
+++ b/Main/Makefile.am
@@ -7,6 +7,7 @@ construct_LDADD = \
 	$(top_builddir)/Tools/Construct/Clipper/libClipper.a \
 	$(top_builddir)/Tools/Construct/Triangulate/libTriangulate.a \
 	$(top_builddir)/Tools/Lib/Polygon/libPolygon.a \
+	$(top_builddir)/Tools/Lib/Triangle/libTriangle.a \
 	$(top_builddir)/Lib/Bucket/libBucket.a \
 	$(top_builddir)/Lib/Math/libMath.a \
 	$(top_builddir)/Lib/Misc/libMisc.a \
