Define -DANSI_DECLARATORS so that library get's built with ANSI function prototyping.

--- a/Triangle/Makefile.am
+++ b/Triangle/Makefile.am
@@ -9,7 +9,7 @@
 #
 #   DEFS = -DTRILIBRARY -DREDUCED -DCDT_ONLY
 
-DEFS += -DTRILIBRARY -DREDUCED
+DEFS += -DTRILIBRARY -DREDUCED -DANSI_DECLARATORS
 
 noinst_LIBRARIES = libTriangle.a
 
