Changed the way I handle #define ANSI_DECLARATORS

--- a/Triangle/Makefile.am
+++ b/Triangle/Makefile.am
@@ -9,7 +9,7 @@
 #
 #   DEFS = -DTRILIBRARY -DREDUCED -DCDT_ONLY
 
-DEFS += -DTRILIBRARY -DREDUCED -DANSI_DECLARATORS
+DEFS += -DTRILIBRARY -DREDUCED
 
 noinst_LIBRARIES = libTriangle.a
 
