--- a/config.h.in
+++ b/config.h.in
@@ -115,6 +115,9 @@
 /* Define if you have the <getopt.h> header file.  */
 #undef HAVE_GETOPT_H
 
+/* Define if you have the <gfc/gdbf.h> header file.  */
+#undef HAVE_GFC_GDBF_H
+
 /* Define if you have the <gpc.h> header file.  */
 #undef HAVE_GPC_H
 
