Changes contributed by Durk Talsma:
Here's a few changes I made to fg-0.58 this weekend. Included are the
following features:
- Sun and moon have a halo
- The moon has a light vector, moon_angle, etc. etc. so that we can have
  some moonlight during the night.
- Lot's of small changes tweakes, including some stuff Norman Vine sent
  me earlier.

--- a/Time/Makefile.am
+++ b/Time/Makefile.am
@@ -13,6 +13,7 @@ libTime_a_SOURCES = \
 	fg_time.cxx fg_time.hxx \
 	fg_timer.cxx fg_timer.hxx \
 	light.cxx light.hxx \
+	moonpos.cxx moonpos.hxx \
 	sunpos.cxx sunpos.hxx \
 	timestamp.hxx
 
