--- a/Triangulate/Makefile.am
+++ b/Triangulate/Makefile.am
@@ -2,6 +2,7 @@ noinst_LIBRARIES = libTriangulate.a
 
 libTriangulate_a_SOURCES = \
 	triangle.cxx triangle.hxx \
+	trieles.cxx trieles.hxx \
 	trinodes.cxx trinodes.hxx \
 	tripoly.cxx tripoly.hxx \
 	trisegs.cxx trisegs.hxx
