--- a/Bucket/Makefile.am
+++ b/Bucket/Makefile.am
@@ -1,7 +1,6 @@
 noinst_LIBRARIES = libBucket.a
 
-libBucket_a_SOURCES = bucketutils.cxx bucketutils.h bucketutils.hxx \
-	newbucket.cxx newbucket.hxx
+libBucket_a_SOURCES = newbucket.cxx newbucket.hxx
 
 bin_PROGRAMS = testbucket
 
