Increased precision in showme when clicking with the middle mouse button   to display coordinates. Build showme. Removed -DREDUCED from compile flags

--- a/Triangle/Makefile.am
+++ b/Triangle/Makefile.am
@@ -9,11 +9,12 @@
 #
 #   DEFS = -DTRILIBRARY -DREDUCED -DCDT_ONLY
 
-DEFS += -DTRILIBRARY -DREDUCED
+DEFS += -DTRILIBRARY
 
 noinst_LIBRARIES = libTriangle.a
 
 libTriangle_a_SOURCES = triangle.c triangle.h
 
-# bin_PROGRAMS = showme
-# showme_SOURCES = showme.c
+bin_PROGRAMS = showme
+showme_SOURCES = showme.c
+showme_LDADD = -lX11
