--- a/Main/Makefile.am
+++ b/Main/Makefile.am
@@ -1,11 +1,12 @@
 bin_PROGRAMS = construct
 
-construct_SOURCES = construct.cxx
+construct_SOURCES = construct.cxx construct_types.hxx
 
 construct_LDADD = \
 	$(top_builddir)/Tools/Construct/Array/libArray.a \
 	$(top_builddir)/Tools/Construct/Clipper/libClipper.a \
 	$(top_builddir)/Tools/Construct/GenOutput/libGenOutput.a \
+	$(top_builddir)/Tools/Construct/GenFans/libGenFans.a \
 	$(top_builddir)/Tools/Construct/Triangulate/libTriangulate.a \
 	$(top_builddir)/Tools/Lib/Polygon/libPolygon.a \
 	$(top_builddir)/Tools/Lib/Triangle/libTriangle.a \
