Integrated Steve's new "plib" conglomeration.

--- a/Lib/Makefile.am
+++ b/Lib/Makefile.am
@@ -1,9 +1,3 @@
-if ENABLE_AUDIO_SUPPORT
-AUDIO_DIRS = Audio
-else
-AUDIO_DIRS = 
-endif
-
 if ENABLE_UNIX_SERIAL
 SERIAL_DIRS = Serial
 else
@@ -11,12 +5,11 @@ SERIAL_DIRS =
 endif
 
 SUBDIRS = \
-	$(AUDIO_DIRS) \
 	Bucket \
 	Debug \
 	Math \
 	Misc \
-	PUI \
 	$(SERIAL_DIRS) \
 	XGL\
+	plib \
 	zlib
