Integration of Steve's plib conglomeration.

--- a/GUI/Makefile.am
+++ b/GUI/Makefile.am
@@ -6,4 +6,7 @@ noinst_LIBRARIES = libGUI.a
 
 libGUI_a_SOURCES = gui.cxx gui.h
 
-INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib -I$(top_builddir)/Simulator
+INCLUDES += -I$(top_builddir) \
+	-I$(top_builddir)/Lib \
+	-I$(top_builddir)/Lib/plib/include \
+	-I$(top_builddir)/Simulator
