--- a/Joystick/Makefile.am
+++ b/Joystick/Makefile.am
@@ -10,4 +10,7 @@ noinst_LIBRARIES = libJoystick.a
 
 libJoystick_a_SOURCES = joystick.cxx joystick.hxx js.hxx
 
-INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib -I$(top_builddir)/Simulator
+INCLUDES += -I$(top_builddir) \
+	-I$(top_builddir)/Lib \
+	-I$(top_builddir)/Lib/plib/include \
+	-I$(top_builddir)/Simulator
