Run configure in Lib/zlib. Removed several old tools dirs.

--- a/configure.in
+++ b/configure.in
@@ -10,7 +10,7 @@ AM_INIT_AUTOMAKE(FlightGear, 0.6.0)
 
 dnl configure other independant packages included with flight gear for
 dnl convenience
-AC_CONFIG_SUBDIRS( Lib/plib )
+AC_CONFIG_SUBDIRS( Lib/plib Lib/zlib )
 
 dnl Checks for programs.
 AC_PROG_MAKE_SET
@@ -310,7 +310,6 @@ AC_OUTPUT( \
 	Lib/Misc/Makefile \
 	Lib/Serial/Makefile \
 	Lib/XGL/Makefile \
-	Lib/zlib/Makefile \
 	Simulator/Makefile \
 	Simulator/Aircraft/Makefile \
 	Simulator/Airports/Makefile \
@@ -354,11 +353,6 @@ AC_OUTPUT( \
 	Tools/Utils/Makefile \
 	Tools/Utils/Makedir/Makefile \
 	Tools/Areas/Makefile \
-	Tools/AssemTris/Makefile \
-	Tools/FixObj/Makefile \
-	Tools/SplitTris/Makefile \
-	Tools/Stripe_w/Makefile \
-	Tools/Tri2obj/Makefile \
 	Tests/Makefile \
 )
 
