--- a/Tools/Makefile.am
+++ b/Tools/Makefile.am
@@ -5,11 +5,4 @@ SUBDIRS = \
 	Prep \
 	Construct \
 	Utils \
-	Areas \
-	AssemTris \
-	FixObj \
-	SplitTris \
-	Stripe_w \
-	Tri2obj
-
-bin_SCRIPTS = process-dem.pl
+	Areas
