Updated 3dfx.sh to allow window vs. full screen via command line. Added 3dfx.sh to distribution. Updated rul serial output. Updated runfgfs.bat files.

--- a/Simulator/Main/Makefile.am
+++ b/Simulator/Main/Makefile.am
@@ -27,7 +27,7 @@ else
 SERIAL_LIBS =
 endif
 
-EXTRA_DIST = runfgfs.in runfgfs.bat.in
+EXTRA_DIST = 3dfx.sh runfgfs.in runfgfs.bat.in
 
 bin_PROGRAMS = fgfs
 
