Added colours.h to distribution.

--- a/Simulator/Objects/Makefile.am
+++ b/Simulator/Objects/Makefile.am
@@ -1,6 +1,7 @@
 noinst_LIBRARIES = libObjects.a
 
 libObjects_a_SOURCES = \
+	colours.h \
 	fragment.cxx fragment.hxx \
 	material.cxx material.hxx \
 	obj.cxx obj.hxx \
