--- a/Simulator/Cockpit/Makefile.am
+++ b/Simulator/Cockpit/Makefile.am
@@ -4,7 +4,8 @@ libCockpit_a_SOURCES = \
 	cockpit.cxx cockpit.hxx \
 	hud.cxx hud.hxx \
 	hud_card.cxx hud_dnst.cxx hud_guag.cxx hud_inst.cxx \
-	hud_labl.cxx hud_ladr.cxx hud_scal.cxx hud_tbi.cxx \
+	hud_labl.cxx hud_ladr.cxx \
+	hud_scal.cxx hud_tbi.cxx \
 	panel.cxx panel.hxx
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib -I$(top_builddir)/Simulator
