Added construct.[ch]xx as a data repository class to hold all the data that needs to be passed back and forth during the scenery assembly.

--- a/Tools/Construct/Main/Makefile.am
+++ b/Tools/Construct/Main/Makefile.am
@@ -7,6 +7,7 @@ construct_LDADD = \
 	$(top_builddir)/Tools/Construct/Clipper/libClipper.a \
 	$(top_builddir)/Tools/Construct/GenOutput/libGenOutput.a \
 	$(top_builddir)/Tools/Construct/Combine/libCombine.a \
+	$(top_builddir)/Tools/Construct/Match/libMatch.a \
 	$(top_builddir)/Tools/Construct/Triangulate/libTriangulate.a \
 	$(top_builddir)/Tools/Lib/Polygon/libPolygon.a \
 	$(top_builddir)/Tools/Lib/Triangle/libTriangle.a \
